crates/aven-check/tests/fixtures/check/invalid/spread-binding-shape-unknown.av
f = (record) =>
  ..record
  1
